Completed Github pages and actions sections

--- a/content/Main-Notebooks/github-pages.ipynb
+++ b/content/Main-Notebooks/github-pages.ipynb
@@ -49,7 +49,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "GitHub pages is a static site hosting service which enables you to host a website. It works by taking HTML, CSS and JavaScript files directly from a repository on GitHub and creates a website after running through these files. Any static file pushed to the repository can be published and personalised static files can be created. GitHub pages do have limitations and prohibitions in place for the sites created and content shared. No private information should be transferred on their sites and other examples include the prohibition of free-web hosting pages for any work area using commercial transactions or the providing of commercial software services. Limitation of usage are also in place. An example of this is that sites sized 1GB or over will not work or publish."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The types of sites on GitHub Pages can be split into three categories and these are project, user and organisation. Project sites differ slightly from the other two types as it is connected to, for example JavaScript or another specific project hosted on GitHub. However, this is different to organisation and user sites as they connect to a specific account on GitHub, as opposed to a certain project. These sites created can be publicly viewed and accessed online but organisation sites, if using GitHub Enterprise Cloud, can makes sites private if desired. These different categories of sites all differ in the way they must be published too. Only one user or organisation account can be used for each account. In order to create and publish a user site, a repository belonging to a personal account must be used. For an organisation account, the repository created must belong to an organisation."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,7 +74,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "GitHub actions are scripts which allows software workflows to be automated with CI/CD. You can test and build code coming directly from GitHub. By using GitHub Actions, users have a variety of functions or actions which they can use, for example branch management and reviewing code. Other actions include deploying a web service or even building a container. Actions can be combined and configured to achieve the services the user wishes to use. GitHub actions is extremely useful as all tools are combined together in order to automate the developing workflow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many advantages to using GitHub Actions. These include, GitHub Actions can be used with many languages, some of these including Java, .NET, Python, Node.js and others. It has runners for all the main OS. Matrix workflows can test many operating systems at the same time, saving the user time. Live logs are available of the users workflow. "
+   ]
   },
   {
    "cell_type": "markdown",
