Started HTTP section work on req and res

--- a/content/Main-Notebooks/github-pages.ipynb
+++ b/content/Main-Notebooks/github-pages.ipynb
@@ -99,7 +99,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "HTTP, or Hypertext transfer protocol, is used to get various resources, for example HTML documents. It provides the frameworks of every data exchange online. As it is a client-server protocol, it takes requests from a recipient which is commonly the web browser. This then uses various documents and other informative pieces found and compiles them together to create a new piece of work. (https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The diagram below shows the workings of HTTP:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/images/HTTP.png\" align=\"center\" width=\"550\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The HTTP protocol can be seen from this diagram as working on a request-response system. It is a client-server protocol and too is a stateless protocol, meaning that requests in the current moment do not know what requests before have included. The HTTP Clients are the Web Browser and then the HTTP Server is actually the Web Server. This diagram explains how the HTTP Clients send a request message to the HTTP server and in return, the HTTP server sends the HTTP Clients a response message. This is how this server system works. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,6 +134,70 @@
     "\n",
     "***"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As stated above, HTTP works on a request-response system and essentially this works by the transferring of different messages between the clients and the server. Request messages, from the HTTP Clients, include this information and are formatted like this: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/images/HTTP_RequestMessage.png\" align=\"center\" width=\"450\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Response messages, coming from the HTTP Server, differ slightly to the request messages but not by much: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://www3.ntu.edu.sg/home/ehchua/programming/webprogramming/images/HTTP_ResponseMessage.png\" align=\"center\" width=\"450\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many different types of requests and responses when using HTTP protocol and this is due to the fact of protocol defining a certain set of request methods. Below are examples of the POST method and the GET method, both including a request and response message."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Post Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Get Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
