Completed Github Pages Notebook

--- a/content/Main-Notebooks/github-pages.ipynb
+++ b/content/Main-Notebooks/github-pages.ipynb
@@ -421,7 +421,25 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Websites can be split into either Static or Dynamic websites. (https://www.geeksforgeeks.org/static-vs-dynamic-website/)\n",
+    "\n",
+    "Firstly, a static website is one which is returned to the server. No content is processed on the server and this sort of website is pretty fast as a result. They do not interact with databases and cannot be changed on the server, hence the name ‘static’ websites. They essentially have files containing prebuilt source codes. These files are built from HTML, JavaScript and CSS, all of which are considered to be easy languages. These sites are not expensive due to the fact that support server-side processing by a host with various languages is not needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unlike the static websites, dynamic websites are returned to the server but are not prebuilt pages and instead are processed in runtime. Therefore, they slower than static websites as a result of this however, they can interact with databases if wished. They also are built accordingly by the user during this runtime helped by server-side languages, including Node.js, ASP.NET, PHP and others. Dynamic websites are more costly to develop. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, which website type is more popular? Dynamic websites are often chosen and used as opposed to static websites for a few reasons. Updates are more easily achieved on a dynamic website and all common changes will happen in every page when asked. However, a static website is different as changing every individual page is necessary and cannot be done during runtime. Although a dynamic website may be more costly in the development stage and is slower in comparison to a static website, it works to be more practical for users when taking the update processes into account."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,7 +455,70 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(https://www.computerhope.com/jargon/s/server.htm) \n",
+    "\n",
+    "A software or hardware device which accepts and answers requests made and transferred over a network is known as a server. They are in charge of network resources. The client is the device making the requests and receiving the responses from the server. Servers can be created and used to do a various number of things, for example transferring emails, controlling access to networks or even hosting websites. Some servers can be known as dedicated servers, which are committed to one website or job, however majority of servers today are shared servers which have many things that they are responsible for such as email, many websites, DNS and FTP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a few examples of other different servers that are used today.\n",
+    "\n",
+    "#### Application server: \n",
+    "This server provides  a framework that runs any applications, despite what they are and their performance. Many different types of application servers exist, with some supporting Java and other supporting PHP and even .NET.  Web-based applications can be ran and developed on this type of server. These servers give a centralized approach to updates of applications and as a result of this, data and code integrity can be allowed. Security is provided on these servers as they centralize the authentication process. Also, performance can be enhanced and improved on this server to heavy usage apps as network traffic is limited."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Print Server: \n",
+    "This type of server can manage one or even more than one printer on a network. It does not have to be a fast computer because of the required load."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Proxy Server: \n",
+    "A proxy can be a server or a program part of a gateway or another computer separating local networks and outside networks. These servers can be related to both hardware and software and they act as an intermediary between internet web pages and the computer. This means that they provide protection from viruses and hackers. A hardware proxy is a physical proxy server managing all sorts of traffic and this lets the server keep local IP addresses private and safe from hackers. All pages are also cached when retrieved through a network. A software proxy can be downloaded onto a computer and some of these can cost a fee to install as they come from a provider."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Database Server: \n",
+    "This computer system provides other computers with data services, for example receiving and obtaining data from a database. Databases can be accessed through either a front-end or a back-end, with the front-end running a machine locally and a back-end using a remote shell to run on the server itself. After retrieving all the data, it can be outputted to whoever requests. Many companies use these database servers for storage purposes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Web Server: \n",
+    "This computer or various computers deliver lots of different information, including web pages to many different users. There are lots of different examples of web servers today, including Nginx, Savant, Microsoft's Web Server IIS and Tomcat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cloud Server: \n",
+    "Cloud servers, or better known as cloud computing, control services over a network using a series of remote servers. This server has big, distributed storage and processing power which can be retrieved by Internet connected devices which are running a browser. It makes uploading and downloading information easy along with simplifying how information can be shared globally and locally. Examples today of various cloud servers include Adobe Creative Cloud, Google Docs, iCloud and Microsoft OneDrive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## End of Notebook"
+   ]
   }
  ],
  "metadata": {
