Finished computation book

--- a/content/Main-Notebooks/computation.ipynb
+++ b/content/Main-Notebooks/computation.ipynb
@@ -608,12 +608,251 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"https://cdn.makezine.com/uploads/2010/03/turingfull560.jpg\" align=\"center\" width=\"700\"/>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ref - https://makezine.com/article/craft/an-actual-turing-machine/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What is a Turing Machine?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Turing Machine was a hypothetical computer invented by Alan M. Turing in 1936."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It consisted of an infinite piece of tape on which the machine could read and write, this tape was divided into cells on which symbols could be drawn from the machine alphabet.\n",
+    "The machine read and write to this tape using a \"head\", and made decisions on where to move using a table that had specifications on \"what to do for each combination of the current state and symbol that is read\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Turing machine was able to simulate any computer algorithm of any complexity even if it was a simplistic piece of tech."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Formal Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a list of the main components in the Turing Machine in a more formal definition:\n",
+    "- Arbitrary finite set Γ with two or more elements, known as the tape alphabet.\n",
+    "- Arbitrary symbol ☐ ∈ Γ, known as the blank symbol. \n",
+    "- Arbitrary nonempty subset Σ ⊆ (Γ \\ {☐}), known as the input alphabet.\n",
+    "- Arbitrary finite set Q, holds elements called states.\n",
+    "- States such as start, accept, and reject are some of the more important states that are in the set Q.\n",
+    "- Transition function δ: (Q \\ {accept, reject}) × Γ → Q × Γ × {−1, +1}."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Working Diagram of the Turing Machine "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/b/bb/Turing_machine_1.JPG\" align=\"center\" width=\"800\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://commons.wikimedia.org/wiki/File:Turing_machine_1.JPG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simulating a Turing Machine with Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X0101111\n",
+      "0X101111\n",
+      "01Y01111\n",
+      "010Y1111\n",
+      "0101X111\n",
+      "01011Y11\n",
+      "010111X1\n",
+      "0101111Y_\n",
+      "0101111_F_\n"
+     ]
+    }
+   ],
+   "source": [
+    "# turing machine state table\n",
+    "stateTable = { \n",
+    "    ('X', '_'): ['_', 'R', 'T'], \n",
+    "    ('X', '0'): ['0', 'R', 'X'], \n",
+    "    ('X', '1'): ['1', 'R', 'Y'], \n",
+    "    ('Y', '_'): ['_', 'R', 'F'], \n",
+    "    ('Y', '0'): ['0', 'R', 'Y'], \n",
+    "    ('Y', '1'): ['1', 'R', 'X'], \n",
+    "}\n",
+    "\n",
+    "# Input for tape\n",
+    "tapeInput = list('0101111')\n",
+    "# Position on tape - start at position 0\n",
+    "tapePos = 0\n",
+    "# Set initial state as first in state table\n",
+    "state = 'X'\n",
+    "\n",
+    "# keep the while loop going while not in a halt state\n",
+    "while state not in ['T', 'F']:\n",
+    "    # print out the current status\n",
+    "    print(''.join(tapeInput[:tapePos]) + state + ''.join(tapeInput[tapePos:]))\n",
+    "    # Get row of table\n",
+    "    row = stateTable[(state, tapeInput[tapePos])]\n",
+    "    # Overwrite the symbol\n",
+    "    tapeInput[tapePos] = row[0]\n",
+    "    # move tape left or right\n",
+    "    if row[1] == 'R':\n",
+    "        # Put any blanks necessary onto the tape\n",
+    "        if tapePos == len(tapeInput) - 1:\n",
+    "            tapeInput = tapeInput + ['_']\n",
+    "        # increase the position to move to the right\n",
+    "        tapePos = tapePos + 1\n",
+    "    else:\n",
+    "        # Put any blanks necessary onto the tape\n",
+    "        if tapePos == 0:\n",
+    "            tapeInput = ['_'] + tapeInput\n",
+    "            # The position on the tape has to move along with it\n",
+    "            tapePos = tapePos + 1\n",
+    "        # decrease the position to move left\n",
+    "        tapePos = tapePos - 1\n",
+    "    # Update the state\n",
+    "    state = row[2]\n",
+    "\n",
+    "# Print the current status. \n",
+    "print(''.join(tapeInput[:tapePos]) + state + ''.join(tapeInput[tapePos:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2: Change the above code to only accept inputs that do not contain any 1's."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to complete this exercise we can simple change the 1s to 2s in the stateTable and the tapeInput, this gives us an output with no 1s."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X0202202\n",
+      "0X202202\n",
+      "02Y02202\n",
+      "020Y2202\n",
+      "0202X202\n",
+      "02022Y02\n",
+      "020220Y2\n",
+      "0202202X_\n",
+      "0202202_T_\n"
+     ]
+    }
+   ],
+   "source": [
+    "# turing machine state table \n",
+    "stateTable = { \n",
+    "    ('X', '_'): ['_', 'R', 'T'], \n",
+    "    ('X', '0'): ['0', 'R', 'X'], \n",
+    "    ('X', '2'): ['2', 'R', 'Y'], \n",
+    "    ('Y', '_'): ['_', 'R', 'F'], \n",
+    "    ('Y', '0'): ['0', 'R', 'Y'], \n",
+    "    ('Y', '2'): ['2', 'R', 'X'], \n",
+    "} \n",
+    "# Input for tape \n",
+    "tapeInput = list('0202202') \n",
+    "# Position on tape - start at position 0 \n",
+    "tapePos = 0 \n",
+    "# Set initial state as first in state table \n",
+    "state = 'X' \n",
+    "# keep the while loop going while not in a halt state \n",
+    "while state not in ['T', 'F']: \n",
+    "    # print out the current status \n",
+    "    print(''.join(tapeInput[:tapePos]) + state + ''.join(tapeInput[tapePos:])) \n",
+    "    # Get row of table \n",
+    "    row = stateTable[(state, tapeInput[tapePos])] \n",
+    "    # Overwrite the symbol \n",
+    "    tapeInput[tapePos] = row[0] \n",
+    "    # move tape left or right \n",
+    "    if row[1] == 'R': \n",
+    "        # Put any blanks necessary onto the tape \n",
+    "        if tapePos == len(tapeInput) - 1: \n",
+    "            tapeInput = tapeInput + ['_'] \n",
+    "        # increase the position to move to the right \n",
+    "        tapePos = tapePos + 1 \n",
+    "    else: \n",
+    "        # Put any blanks necessary onto the tape \n",
+    "        if tapePos == 0: \n",
+    "            tapeInput = ['_'] + tapeInput \n",
+    "            # The position on the tape has to move along with it \n",
+    "            tapePos = tapePos + 1 \n",
+    "        # decrease the position to move left \n",
+    "        tapePos = tapePos - 1 \n",
+    "    # Update the state \n",
+    "    state = row[2] \n",
+    "# Print the current status. \n",
+    "print(''.join(tapeInput[:tapePos]) + state + ''.join(tapeInput[tapePos:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## End of Notebook"
+   ]
   }
  ],
  "metadata": {
