finished complex numbers in fourier book

--- a/content/Main-Notebooks/fourier-transform.ipynb
+++ b/content/Main-Notebooks/fourier-transform.ipynb
@@ -78,7 +78,382 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Complex numbers are numbers that are made up of a real part and a made up part. They are written in the form a + bi, where a is the real part and b is the made up part. The letter i represents the square root of -1. An example of a complex number would be -4 + 0i, here the number -4 is the real part, 0 is made up and i again represents the square root of -1. We can use all the standard mathematical operations with complex number, such as adding subtracting etc. Complex numbers have many different applications such as signal processing, electromagnetism and quantum mechanics.\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Complex_number#Applications"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it comes to Fourier transform, complex numbers are often used because they allow for a more concise and computationally efficient overview of sinusoidal functions. These functions are important in many different applications of the Fourier transform. The sinusoidal function can be written as follows: y(t) = A * sin(2 * pi * f * t), where A is the amplitude of the sinusoid, f is the frequency, and t is time. This function represents a wave that oscillated at a constant frequency and amplitude."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complex numbers also allow us to represent both the magnitude and phase of each frequency component in a single number. This is useful as the magnitude of the frequency component lets us know how much of that frequency is present in the original signal, and the phase lets us know the sinusoid has shifted in time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An example of this is, if we take the complex number z = a + bi, where a and b are real numbers. We can say that a represents the magnitude of the sinusoid and b is the phase shift. This allows us to display the sinusoidal function y(t) = A * sin(2 * pi * f * t) as a single complex number, rather than having two separate values. \n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Fourier_transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Complex Number Examples in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 7)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A tuple of length 2. \n",
+    "x = (3, 7) \n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-2, 5)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A tuple of length 2. \n",
+    "y = (-2, 5) \n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition. \n",
+    "def add(x, y): \n",
+    "    return (x[0] + y[0], x[1]+ y[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 12)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# call function to add x and y\n",
+    "add(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiplication. \n",
+    "def mul(x, y): \n",
+    "    a, b = x \n",
+    "    c, d = y \n",
+    "    return (a * c - b * d, a * d + b * c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-41, 1)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# call function to multiply x and y\n",
+    "mul(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1+12j)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Addition using +. \n",
+    "(3 + 7j) + (-2 + 5j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-41+1j)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiplication using *. \n",
+    "(3 + 7j) * (-2 + 5j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1j"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Can't just write j for a literal. \n",
+    "1j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In Object Oriented form. \n",
+    "class ComplexNums(): \n",
+    "    def __init__(self, a, b): \n",
+    "        self.a = a \n",
+    "        self.b = b \n",
+    "     \n",
+    "    def __add__(self, other): \n",
+    "        return ComplexNums(self.a + other.a, self.b + other.b) \n",
+    "     \n",
+    "    def __mul__(self, other): \n",
+    "        a, b = self.a, self.b \n",
+    "        c, d = other.a, other.b \n",
+    "        return ComplexNums(a*c - b*d, a*d + b*c) \n",
+    "     \n",
+    "    def __repr__(self): \n",
+    "        return f'ComplexNums({self.a}, {self.b})'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(3, 7)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an instance  of the class\n",
+    "ComplexNums(3, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(-2, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Another instance. \n",
+    "ComplexNums(-2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(1, 12)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Overloading the + \n",
+    "ComplexNums(3, 7) + ComplexNums(-2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(-41, 1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Overloading the * \n",
+    "ComplexNums(3, 7) * ComplexNums(-2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instances. \n",
+    "x = ComplexNums(3, 7) \n",
+    "y = ComplexNums(-2, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(1, 12)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add x and y points above\n",
+    "x + y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComplexNums(-41, 1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# multiply x and y points above\n",
+    "x * y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://github.com/ianmcloughlin/2223-S1-emerging-technologies/blob/main/notebooks/04-fourier-transform.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
