--- a/content/Main-Notebooks/fourier-transform.ipynb
+++ b/content/Main-Notebooks/fourier-transform.ipynb
@@ -651,7 +651,111 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$ f(x) = a x^2 + b x + c$\n",
+    "<br>\n",
+    "$ f(x) = 0 \\Rightarrow x = \\frac{-b \\pm \\sqrt{b^2 - 4ac}}{2a}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formula(a, b, c): \n",
+    "    undersqrt = (b**2 - 4 * a * c)**0.5 \n",
+    "    return [(-b - undersqrt) / (2 * a), (-b + undersqrt) / (2 * a)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.0]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# y = x^2 \n",
+    "formula(1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-2.0, 2.0]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# y = x^2 - 4 \n",
+    "formula(1, 0, -4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(-1.2246467991473532e-16-2j), (1.2246467991473532e-16+2j)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# y = x^2 + 4 \n",
+    "formula(1, 0, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.0-2.0j, 0.0+2.0j\n"
+     ]
+    }
+   ],
+   "source": [
+    "# F strings. \n",
+    "x_0, x_1 = formula(1, 0, 4) \n",
+    "print(f'{x_0:.1f}, {x_1:.1f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref - https://github.com/ianmcloughlin/2223-S1-emerging-technologies/blob/main/notebooks/04-fourier-transform.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -665,11 +769,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Discrete Fourier Transform or (DFT) is a mathematical operation that breaks down a finite sequence of equally spaced samples of a function into its individual frequency components. It is called discrete as it is a discrete version of the continuous Fourier transform which is used to break down continuous, infinitely long functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be further defined by the following:\n",
+    "- Given a finite sequence x[n] of N equally spaced samples, the discrete Fourier transform X[k] of the sequence is shown by this formula:\n",
+    "- X[k] = sum(x[n] * e^(-i * 2 * pi * k * n / N)), for n = 0, 1, ..., N-1\n",
+    "- where i is the imaginary unit (i = sqrt(-1)), and k is the integer index ranging from 0 to N-1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is an inverse of the DFT too which is given by this formula:\n",
+    "- x[n] = (1/N) * sum(X[k] * e^(i * 2 * pi * k * n / N)), for k = 0, 1, ..., N-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Examples of where DFT can be used it for analyzing and processing discrete time signals, like digital audio and image data. It shows these discrete time signals as a sum of sinusoids of different frequencies. This allows us to analyze the frequency content of the signal and allows for further filtering and modifying of the signal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Examples of DFT in Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Numerical arrays. \n",
+    "import numpy as np\n",
+    "\n",
+    "# Fast Fourier transform. \n",
+    "import scipy.fft as fft"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1. ,  2. ,  1. , -1. ,  1.5])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a test array. \n",
+    "x = np.array([1.0, 2.0, 1.0, -1.0, 1.5]) \n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.5       -0.j        ,  2.08155948-1.65109876j,\n",
+       "       -1.83155948+1.60822041j, -1.83155948-1.60822041j,\n",
+       "        2.08155948+1.65109876j])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply the fast Fourier transform to x. \n",
+    "y = fft.fft(x) \n",
+    "y"
+   ]
   },
   {
    "cell_type": "markdown",
